# Qt-QML

./: .gitignore
chatapp/: CMakeLists.txt  README.md  chatapp.pro  main.cpp  qml.qrc
chatapp/include/: usermanager.h
chatapp/qml/: RegisterView.qml  main.qml
chatapp/qml/views/: BaseScreen.qml  ChangePasswordView.qml  RegisterView.qml  UserDetailsView.qml
chatapp/src/: usermanager.cpp
